<resources>
    <string name="app_name">Titan Scouting</string>
    <string name="pre_game">Pregame Scouting</string>
    <string name="logs">Logs</string>
    <string name="autonomous">Autonomous</string>
    <string name="teleop">Teleop</string>
    <string name="endgame"><u>Endgame</u></string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="number_of_amps_scored">Number of Amps Scored</string>
    <string name="number_of_speaker_scored">Number of Speaker Scored</string>
    <string name="number_of_amp_missed">Number of Amp Missed</string>
    <string name="number_of_speaker_missed">Number of Speaker Missed</string>
    <!-- Strings for Autonomous-->


    <string-array name="team_choices">
        <item>Red 1</item>
        <item>Red 2</item>
        <item>Red 3</item>
        <item>Blue 1</item>
        <item>Blue 2</item>
        <item>Blue 3</item>
    </string-array>

    <string-array name="stagePositions">
        <item>None</item>
        <item>Park</item>
        <item>Stage Attempted</item>
        <item>Stage Completed</item>
        <item>Harmony</item>

    </string-array>


    <string name="add_a_match">Add a match</string>
    <string name="refresh">Refresh</string>
    <string name="single_substation">Single Substation</string>
    <string name="double_substation">Double Substation</string>
    <string name="penalties_fouls">Penalties/fouls</string>
    <string name="to_endgame">To Endgame</string>
    <string name="parked">Parked\n</string>
    <string name="none">None</string>
    <string name="in_trap">Onstage+Scored in Trap</string>
    <string name="auto" />
    <string name="amp" />
    <string name="middle" />
    <string name="source" />
    <string name="moved" />
    <string name="did_not_move" />
    <string name="speaker" />
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="missed">Missed</string>
    <string name="summary">Review and Submit</string>


    <string name="speaker_teleop">Disqualified \nPancake bot</string>


    <string name="park">Parked at stage</string>
    <string name="onstage">On stage</string>
    <string name="trap">Notes in trap:</string>

    <string name="questions">Questions</string>
    <string name="coop">Cooperation bonus</string>
    <string name="dq">Disqualified</string>
    <string name="driver">Driver ability (1 to 5)</string>
    <string name="defense">Defense ability (1 to 5)</string>
    <string name="mechanical">Mechanical reliability (1 to 5)</string>
    <string name="ground">Can pick up notes from ground</string>
    <string name="kit">Kit bot</string>
    <string name="pancake">Pancake bot</string>
    <string name="human">Human throw succeed</string>
    <string name="comments">Comments:</string>
    <string name="qrContentDescription">QR image</string>
    <string name="first_fragment_label">First Fragment Label</string>
    <string name="second_fragment_label">Second Fragment Label</string>
    <string name="submit">Submit</string>
    <string name="titan_scouting">Titan Scouting</string>
    <string name="start">start</string>
    <string name="title_activity_autonomous">Autonomous</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="pregame"><u>Pregame</u></string>
</resources>