<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.Pregame">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="371dp"
        android:layout_height="122dp"
        android:layout_marginStart="492dp"
        android:layout_marginTop="28dp"
        android:text="@string/pre_game"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editMatchNumber"
        android:layout_width="347dp"
        android:layout_height="99dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="0"
        android:inputType="number"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/match_num" />

    <EditText
        android:id="@+id/editTeamNumber"
        android:layout_width="347dp"
        android:layout_height="99dp"
        android:layout_marginBottom="128dp"
        android:ems="10"
        android:hint="0"
        android:inputType="number"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/back_to_home_pregame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editScouterName"
        android:layout_width="347dp"
        android:layout_height="99dp"
        android:layout_marginBottom="128dp"
        android:ems="10"
        android:hint="First and Last Name"
        android:inputType="text"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/preGameNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="347dp"
        android:layout_height="111dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/editMatchNumber"
        app:layout_constraintTop_toBottomOf="@+id/team_side" />

    <TextView
        android:id="@+id/match_num"
        android:layout_width="737dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        android:text="MatchNumber"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/editTeamNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/team_num"
        android:layout_width="737dp"
        android:layout_height="35dp"
        android:layout_marginTop="84dp"
        android:text="Team Number"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMatchNumber" />

    <TextView
        android:id="@+id/scouterName"
        android:layout_width="737dp"
        android:layout_height="35dp"
        android:layout_marginTop="84dp"
        android:text="Scouter Name"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/team_side"
        android:layout_width="737dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:text="Team Side"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/preGameNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:onClick="autonomous"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toEndOf="@+id/editTeamNumber" />

    <Button
        android:id="@+id/back_to_home_pregame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="48dp"
        android:onClick="back"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>